--- a/src/main/resources/assets/tetra/lang/ru_ru.json
+++ b/src/main/resources/assets/tetra/lang/ru_ru.json
@@ -1,7 +1,7 @@
 {
     "itemGroup.tetra": "Tetra",
     "harvests.filter.tetra": "Tetra",
-    "harvests.filter.tetra.tooltip": "Предметы используют уровни инструментов в Tetra.",
+    "harvests.filter.tetra.tooltip": "Уровни инструментов используются предметами в Tetra.",
     "tetra.not_available": "Н/д",
     "tetra.attribute.draw_strength.name": "Сила натяжения лука",
     "tetra.attribute.draw_speed.name": "Время натяжения лука",
@@ -726,58 +726,58 @@
     "item.tetra.scroll.single/points_end.prefix": "Схема",
     "item.tetra.scroll.single/points_end.name": "Обломок наконечника",
     "item.tetra.scroll.single/points_end.description": "Схемы для наконечников копья, способные высасывать энергию из различных видов сферических форм.",
-    "item.tetra.scroll.hone_gild_1.prefix": "Заточка",
-    "item.tetra.scroll.hone_gild_1.name": "Позолота I",
-    "item.tetra.scroll.hone_gild_1.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
-    "item.tetra.scroll.hone_gild_1.description_extended": "Чары на этом свитке в какой-то мере выцвели, они позволяет модулям позолотить модули до I уровня. Объедини 2 свитка Позолота I в сетке создания, чтобы создать свиток Позолота II.",
-    "item.tetra.scroll.hone_gild_2.prefix": "Заточка",
-    "item.tetra.scroll.hone_gild_2.name": "Позолота II",
-    "item.tetra.scroll.hone_gild_2.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
-    "item.tetra.scroll.hone_gild_2.description_extended": "Чары на этом свитке были частично восстановлены, они позволяет модулям позолотить модули до II уровня. Объедини 2 свитка Позолота II в сетке создания, чтобы создать свиток Позолота III.",
-    "item.tetra.scroll.hone_gild_3.prefix": "Заточка",
-    "item.tetra.scroll.hone_gild_3.name": "Позолота III",
-    "item.tetra.scroll.hone_gild_3.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
-    "item.tetra.scroll.hone_gild_3.description_extended": "Чары на этом свитке были частично восстановлены, они позволяет модулям позолотить модули до III уровня. Объедини 2 свитка Позолота III в сетке создания, чтобы создать свиток Позолота IV.",
-    "item.tetra.scroll.hone_gild_4.prefix": "Заточка",
-    "item.tetra.scroll.hone_gild_4.name": "Позолота IV",
-    "item.tetra.scroll.hone_gild_4.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
-    "item.tetra.scroll.hone_gild_4.description_extended": "Чары на этом свитке были частично восстановлены, они позволяет модулям позолотить модули до IV уровня. Объедини 2 свитка Позолота IV в сетке создания, чтобы создать свиток Позолота V.",
-    "item.tetra.scroll.hone_gild_5.prefix": "Заточка",
-    "item.tetra.scroll.hone_gild_5.name": "Позолота V",
-    "item.tetra.scroll.hone_gild_5.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
-    "item.tetra.scroll.hone_gild_5.description_extended": "Чары на этом свитке были полностью восстановлены, они позволяет модулям позолотить модули до V уровня.",
-    "item.tetra.scroll.double/basic_axe/warforge.prefix": "Оружия войны, глава 1",
-    "item.tetra.scroll.double/basic_axe/warforge.name": "Боевые топоры",
-    "item.tetra.scroll.double/basic_axe/warforge.description": "Содержит различные замыслы о том, как сделать топоры эффективными в бою, позволяет улучшить топоры в верстаке.",
-    "item.tetra.scroll.double/basic_axe/warforge.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
-    "item.tetra.scroll.double/basic_hammer/warforge.prefix": "Оружия войны, глава 2",
-    "item.tetra.scroll.double/basic_hammer/warforge.name": "Боевые молоты",
-    "item.tetra.scroll.double/basic_hammer/warforge.description": "Содержит различные замыслы о том, как сделать молоты эффективными в бою, позволяет улучшить молоты в верстаке.",
-    "item.tetra.scroll.double/basic_hammer/warforge.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
-    "item.tetra.scroll.double/basic_pickaxe/warforge.prefix": "Оружия войны, глава 3",
-    "item.tetra.scroll.double/basic_pickaxe/warforge.name": "Боевые кирки",
-    "item.tetra.scroll.double/basic_pickaxe/warforge.description": "Содержит различные замыслы о том, как сделать кирки эффективными в бою, позволяет улучшить кирки в верстаке.",
-    "item.tetra.scroll.double/basic_pickaxe/warforge.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
-    "item.tetra.scroll.double/butt/warforge.prefix": "Оружия войны, глава 4",
-    "item.tetra.scroll.double/butt/warforge.name": "Притуплённые концы",
-    "item.tetra.scroll.double/butt/warforge.description": "Содержит различные замыслы о том, как сделать притупленные концы эффективными в бою, позволяет улучшить притупленные концы в верстаке.",
-    "item.tetra.scroll.double/butt/warforge.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
-    "item.tetra.scroll.double/claw/warforge.prefix": "Оружия войны, глава 5",
-    "item.tetra.scroll.double/claw/warforge.name": "Когти",
-    "item.tetra.scroll.double/claw/warforge.description": "Содержит различные замыслы о том, как сделать когти эффективными в бою, позволяет улучшить когти в верстаке.",
-    "item.tetra.scroll.double/claw/warforge.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
-    "item.tetra.scroll.double/hoe/warforge.prefix": "Оружия войны, глава 6",
-    "item.tetra.scroll.double/hoe/warforge.name": "Гвизармы",
-    "item.tetra.scroll.double/hoe/warforge.description": "Содержит различные замыслы о том, как сделать гвизармы эффективными в бою, позволяет улучшить гвизармы в верстаке.",
-    "item.tetra.scroll.double/hoe/warforge.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
-    "item.tetra.scroll.double/sickle/warforge.prefix": "Оружия войны, глава 7",
-    "item.tetra.scroll.double/sickle/warforge.name": "Боевые серпы",
-    "item.tetra.scroll.double/sickle/warforge.description": "Содержит различные замыслы о том, как сделать серпы эффективными в бою, позволяет улучшить серпы в верстаке.",
-    "item.tetra.scroll.double/sickle/warforge.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
-    "item.tetra.scroll.double/adze/warforge.prefix": "Оружия войны, глава 8",
-    "item.tetra.scroll.double/adze/warforge.name": "Боевые теслó",
-    "item.tetra.scroll.double/adze/warforge.description": "Содержит различные замыслы о том, как сделать тесла эффективными в бою, позволяет улучшить теслó в верстаке.",
-    "item.tetra.scroll.double/adze/warforge.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
+    "item.tetra.scroll.hone/gild_1.prefix": "Заточка",
+    "item.tetra.scroll.hone/gild_1.name": "Позолота I",
+    "item.tetra.scroll.hone/gild_1.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
+    "item.tetra.scroll.hone/gild_1.description_extended": "Чары на этом свитке в какой-то мере выцвели, они позволяет модулям позолотить модули до I уровня. Объедини 2 свитка Позолота I в сетке создания, чтобы создать свиток Позолота II.",
+    "item.tetra.scroll.hone/gild_2.prefix": "Заточка",
+    "item.tetra.scroll.hone/gild_2.name": "Позолота II",
+    "item.tetra.scroll.hone/gild_2.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
+    "item.tetra.scroll.hone/gild_2.description_extended": "Чары на этом свитке были частично восстановлены, они позволяет модулям позолотить модули до II уровня. Объедини 2 свитка Позолота II в сетке создания, чтобы создать свиток Позолота III.",
+    "item.tetra.scroll.hone/gild_3.prefix": "Заточка",
+    "item.tetra.scroll.hone/gild_3.name": "Позолота III",
+    "item.tetra.scroll.hone/gild_3.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
+    "item.tetra.scroll.hone/gild_3.description_extended": "Чары на этом свитке были частично восстановлены, они позволяет модулям позолотить модули до III уровня. Объедини 2 свитка Позолота III в сетке создания, чтобы создать свиток Позолота IV.",
+    "item.tetra.scroll.hone/gild_4.prefix": "Заточка",
+    "item.tetra.scroll.hone/gild_4.name": "Позолота IV",
+    "item.tetra.scroll.hone/gild_4.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
+    "item.tetra.scroll.hone/gild_4.description_extended": "Чары на этом свитке были частично восстановлены, они позволяет модулям позолотить модули до IV уровня. Объедини 2 свитка Позолота IV в сетке создания, чтобы создать свиток Позолота V.",
+    "item.tetra.scroll.hone/gild_5.prefix": "Заточка",
+    "item.tetra.scroll.hone/gild_5.name": "Позолота V",
+    "item.tetra.scroll.hone/gild_5.description": "Зачарованный свиток, который позволяет оттачивать ёмкость магии модуля.",
+    "item.tetra.scroll.hone/gild_5.description_extended": "Чары на этом свитке были полностью восстановлены, они позволяет модулям позолотить модули до V уровня.",
+    "item.tetra.scroll.warforge/axe.prefix": "Оружия войны, глава 1",
+    "item.tetra.scroll.warforge/axe.name": "Боевые топоры",
+    "item.tetra.scroll.warforge/axe.description": "Содержит различные замыслы о том, как сделать топоры эффективными в бою, позволяет улучшить топоры в верстаке.",
+    "item.tetra.scroll.warforge/axe.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
+    "item.tetra.scroll.warforge/hammer.prefix": "Оружия войны, глава 2",
+    "item.tetra.scroll.warforge/hammer.name": "Боевые молоты",
+    "item.tetra.scroll.warforge/hammer.description": "Содержит различные замыслы о том, как сделать молоты эффективными в бою, позволяет улучшить молоты в верстаке.",
+    "item.tetra.scroll.warforge/hammer.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
+    "item.tetra.scroll.warforge/pickaxe.prefix": "Оружия войны, глава 3",
+    "item.tetra.scroll.warforge/pickaxe.name": "Боевые кирки",
+    "item.tetra.scroll.warforge/pickaxe.description": "Содержит различные замыслы о том, как сделать кирки эффективными в бою, позволяет улучшить кирки в верстаке.",
+    "item.tetra.scroll.warforge/pickaxe.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
+    "item.tetra.scroll.warforge/butt.prefix": "Оружия войны, глава 4",
+    "item.tetra.scroll.warforge/butt.name": "Притуплённые концы",
+    "item.tetra.scroll.warforge/butt.description": "Содержит различные замыслы о том, как сделать притупленные концы эффективными в бою, позволяет улучшить притупленные концы в верстаке.",
+    "item.tetra.scroll.warforge/butt.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
+    "item.tetra.scroll.warforge/claw.prefix": "Оружия войны, глава 5",
+    "item.tetra.scroll.warforge/claw.name": "Когти",
+    "item.tetra.scroll.warforge/claw.description": "Содержит различные замыслы о том, как сделать когти эффективными в бою, позволяет улучшить когти в верстаке.",
+    "item.tetra.scroll.warforge/claw.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
+    "item.tetra.scroll.warforge/hoe.prefix": "Оружия войны, глава 6",
+    "item.tetra.scroll.warforge/hoe.name": "Гвизармы",
+    "item.tetra.scroll.warforge/hoe.description": "Содержит различные замыслы о том, как сделать гвизармы эффективными в бою, позволяет улучшить гвизармы в верстаке.",
+    "item.tetra.scroll.warforge/hoe.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
+    "item.tetra.scroll.warforge/sickle.prefix": "Оружия войны, глава 7",
+    "item.tetra.scroll.warforge/sickle.name": "Боевые серпы",
+    "item.tetra.scroll.warforge/sickle.description": "Содержит различные замыслы о том, как сделать серпы эффективными в бою, позволяет улучшить серпы в верстаке.",
+    "item.tetra.scroll.warforge/sickle.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
+    "item.tetra.scroll.warforge/adze.prefix": "Оружия войны, глава 8",
+    "item.tetra.scroll.warforge/adze.name": "Боевые теслó",
+    "item.tetra.scroll.warforge/adze.description": "Содержит различные замыслы о том, как сделать тесла эффективными в бою, позволяет улучшить теслó в верстаке.",
+    "item.tetra.scroll.warforge/adze.description_extended": "§7[§8Shift + пкм§7]§8 подробнее.",
     "item.tetra.scroll.warforge.details": "§l§nБоевая ковка§r\n\nВыковывание двухголового инструмента сделает его куда более эффективнее в бою, это даёт:\n\n + §lпассивный§r параметр либо эффект зависящий от выкованной головы.\n\n + пкм §lспособностью§r основанной на левой головке.\n\n + способность §lмодификатор§r основанный на правой головке.\n§l§nБоевые топоры§r\n\n§lПассивно§r: Отсечение\nАтаки имеют вероятность понизить максимальное здоровье цели.\n\n§lСпособность§r: Казнь\nНаносит дополнительный урон зависящий от потери здоровья и пагубных эффектов.\n\n§lМодификатор§r: Перегрузка\nСпособности можно заряжать ещё больше, чтобы увеличить урон и усилить эффекты.\n§l§nБоевые молоты§r\n\n§lПассивно§r: Дробление\nАтаки немного игнорируют броню и эффекты поглощения.\n\n§lСпособность§r: Хлопок\nАтакует одиночную цель с сильным отбрасыванием, либо поражает несколько врагов на большой площади.\n\n§lМодификатор§r: Импульс\nПобуждает способностям оглушить цели либо ещё сильнее их отбросить.\n§l§nБоевые кирки§r\n\n§lПассивно§r: Протыкание\nАтаки наносят дополнительный урон по небронированным целям.\n\n§lСпособность§r: Разрыв\nСнижает броню цели либо наносит ей кровотечение.\n\n§lМодификатор§r: Комбинация ударов\nНабирает комбо-очки от обычных атак, которые усиливают способности.\n§l§nОбухи инструментов§r\n\n§lПассивно§r: Лёгкость\nОказывает показательное увеличение скорости, но в то же время снижает уровень инструмента.\n\n§lСпособность§r: Никакая\n\n§lМодификатор§r: Лёгкость\nСнижает время зарядки способности и перезарядку.\n§l§nКогти§r\n\n§lПассивно§r: Бронепробиваемость.\nАтаки частично игнорируют броню.\n\n§lСпособность§r: Вскрытие\nПрименяет суммирующий эффект снижения брони на цель.\n\n§lМодификатор§r: Отмщение\nУсиливает способности в тех случаях, когда владелец в неблагоприятных условиях.\n§l§nГвизармы (мотыги)§r\n\n§lПассивно§r: Дополнительный урон\nУвеличивает общий урон оружия.\n\n§lСпособность§r: Превышение\nНаносит высокий урон, но то же время истощает как цель, так и владельца.\n\n§lМодификатор§r: Выматывание\nСпособности более эффективны, но в то же время истощают дополнительные очки еды.\n§l§nБоевые серпы§r\n\n§lПассивно§r: Разящий удар\nУвеличенный разящий урон и диапазон.\n\n§lСпособность§r: Жатва\nПоражает цели по площади, убивает и наделяет возможностями владельца.\n\n§lМодификатор§r: Оживление\nПри успешном использовании повышает возможности способностям.\r§l§nБоевые теслы§r\n\n§lПассивно§r: Дополнительный урон\nЗначительно увеличивает урон для головки теслы.\n\n§lСпособность§r: Выпад\nБросься вперёд и нанеси урон по первой поражённой цели.\n\n§lМодификатор§r: Защита\nСпособности дают бонусы к защите в тех случаях, когда предмет используется в руке.",
     "item.tetra.scroll.unknown.name": "Свиток",
     "item.tetra.scroll.effects": "Эффект создания",
