--- a/src/main/resources/assets/tetra/lang/pt_br.json
+++ b/src/main/resources/assets/tetra/lang/pt_br.json
@@ -661,8 +661,8 @@
     "item.tetra.modular.repair_material.empty": "Não precisa ser reparado",
     "block.tetra.basic_workbench": "Banco de trabalho",
     "block.tetra.basic_workbench.description": "Clique direito em uma bancada de trabalho com um martelo para criar um banco de trabalho",
-    "block.tetra.rack": "Prateleira",
-    "block.tetra.rack.description": "Os itens podem ser pendurados na prateleira, clique direito para adicionar ou remover um item.\nUma ferramenta pendurada em uma prateleira perto de um banco de trabalho fica disponível para criação como se estivesse no inventário do jogador, a prateleira precisa estar dentro de uma área 3x3x3 (centralizado um bloco acima do banco de trabalho) para que isso funcione.",
+    "block.tetra.rack": "Suporte",
+    "block.tetra.rack.description": "Os itens podem ser pendurados no suporte, clique direito para adicionar ou remover um item.\nUma ferramenta pendurada em um suporte perto de um banco de trabalho fica disponível para criação como se estivesse no inventário do jogador, o suporte precisa estar dentro de uma área 3x3x3 (centralizado um bloco acima do banco de trabalho) para que isso funcione.",
     "block.tetra.block_geode": "Bloco de geodo",
     "item.tetra.geode": "Geodo",
     "item.tetra.geode.tooltip": "Apresenta brilho dentro na presença de luz\n \n§8Abrir em um banco de trabalho pode render minerais valiosos, o drop e afetado pelo encantamento de fortuna",
@@ -2119,7 +2119,7 @@
     "tetra.advancements.upgrades.workbench.title": "Banco mk II",
     "tetra.advancements.upgrades.workbench.description": "Atualize uma bancada de trabalho clicando com o botão direito do mouse com um martelo",
     "tetra.advancements.upgrades.rack.title": "Dentro do alcance",
-    "tetra.advancements.upgrades.rack.description": "Coloque uma prateleira perto de um banco de trabalho para facilitar o acesso às suas ferramentas",
+    "tetra.advancements.upgrades.rack.description": "Coloque um suporte perto de um banco de trabalho para facilitar o acesso às suas ferramentas",
     "tetra.improvement.destabilized/haunted.name": "§5Desestabilizado: Assombrado",
     "tetra.improvement.destabilized/haunted.description": "Este módulo foi assombrado e às vezes se voltará contra o portador do item! Desaparecerá com o tempo.",
     "tetra.slot.holo/frame": "Estrutura",
